# GeorgeESP32

./: README.md
ESP-32F/: CLion 环境配置.md  README.md
ESP-32F/001-hello_world/: README.md
ESP-32F/002LEDBlink/: README.md
ESP-32F/003-http_server/: http_server_app.h  wifi_manager.h
ESP-32F/004-led_control/: led_output.c  led_output.h  system_status.h
ESP-32F/005-display_control/: display_service.c  display_service.h
ESP-32F/006-ble_wifi_provisioning/: ble_provisioning.c
ESP-32F/007-ble_led_control/: ble_led_service.c  ble_manager.c  ble_manager.h
ESP-32F/008-ble_ancs/: README.md  ble_ancs_manager.c  notification_filter.c  notification_filter.h  notification_rules.c  system_status.h
ESP-32F/app-ble/: .gitignore  README.md  settings.gradle.kts
ESP-32F/doc/: ESP-32F_TFT_ST7735R_hello_world_简要说明.md
ESP-32F/esp32k/: CMakeLists.txt  README.md  (+2 more)
ESP-32F/esp32k/main/: CMakeLists.txt  ancs_notification_parser.c  ancs_notification_parser.h  ble_ancs_manager.c  ble_ancs_manager.h  ble_led_service.c  ble_led_service.h  ble_provisioning.h  device_config.c  device_config.h  display_service.c  esp32k_main.c  http_server_app.c  led_output.c  message_center.c  message_center.h  notification_rules.c  notification_rules.h  phase_effect.c  phase_effect.h  recent_apps.c  recent_apps.h  system_status.c  system_status.h  wifi_fixed_config.h  wifi_manager.c  wifi_service.c  wifi_service.h
docs/: 0. 环境配置：基础工具.md  1. 环境配置：安装 ESP-IDF：Git 克隆.md  2. 环境配置：安装 ESP-IDF：EIM.md  3. 环境配置：安装 ESP-IDF：压缩包.md  4. 环境配置：配置 ESP-IDF 环境.md  5. 环境配置：串口.md  6. 环境配置：CLion.md  7. 编译运行：命令行.md  8. 编译运行：CLion.md
消息终端/: README.md
(+41 files in other folders)
